# code

./: .gitignore  README.md
bash/: check_running  repo_check  some-really-long-command  spinner
citr-v9-project/padre-ginos/: eslint.config.mjs  index.html  package-lock.json  package.json
css-practice/: .gitignore  README.md  app.css  base.css  carousel.css  carousel.js  focus.css  glow.css  navbar.css  navbar.ts  special_elements.css
css-practice/templates/: card.html  carousel.html  focus.html  form.html  glow.html  grid.html  hero.html  index.html  layout.html  navbar.html  special_elements.html
d3-practice/: README.md  package-lock.json  package.json
d3-practice/01-pie-basic/: app.css  index.html  script.js
d3-practice/02-line-chart/: app.css  index.html  script.js
esp32_test_3/: .gitignore  CMakeLists.txt  README.md  dev.sh  mydiff.txt
esp32_test_3/main/: CMakeLists.txt  CMakeLists_old.txt  display.c  display.h  hello_world_main.c  idf_component.yml  temperature.c  temperature.h
guantlet/: README.md
guantlet/cli_app/: pyproject.toml
guantlet/cli_app/app/: cli.py
guantlet/cpp_cli_app/: app  app.cpp
guantlet/cpp_lab/: README.md  a.out  arithops.cpp  challenges.cpp  functions.cpp  hello_world.cpp  math.cpp  namespaces.cpp  (+5 more)
leetcode/: contains_duplicate.js  contains_duplicate.py  id_121.py  two_sum.py
nasm/: one  one.nasm
py-cli/: .gitignore  README.md  main_.py  pyproject.toml
sandbox/: db_types.py  exceptions.py  proxy.js  split.py  table_name.py
souffle/: edge.facts  example.dl
zig/: hello.zig  printing.zig  types.zig  what.zig
(+115 files in other folders)
